# coding_challenge

./: .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml
src/coding_challenge/: __init__.py  agents.py  game.py  game_node.py  messages.lcm  node.py
tests/: test_agents.py  test_game.py  test_game_node.py
